fix logo not appearing on mobile

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -19,6 +19,7 @@
   background-color: white;
 
   > img {
+    min-width: 300px;
     width: 100%;
     height: 4.5rem;
   }
